assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;500&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    background-color: #171A1C;
    color: #F2F2F2;
    margin: 0 8% 0 8%;
    font-family: Nunito, sans-serif;
    font-weight: 300;

}

/* headings */

h1,
h2 {
    font-family: Nunito, sans-serif;
    font-weight: 500;
    color: #FBC600;
    text-transform: uppercase;
}

#logo {
    float: left;
    height: 120px;
    width: 180px;
}

/* navigation links */

#menu {
    font-size: 120%;

}

#menu,
#logo {
    line-height: 120px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-left: 80px;
    text-transform: uppercase;
}

#menu a {
    color: #FBC600;
    font-weight: 500;
    text-decoration: none;
}

#menu a:hover {
    border-bottom: 3px solid #FBC600;
}

.active {
    border-bottom: 3px solid #ff0000;
}

/* hero image slider */

.hero-slider {
    height: 600px;
    width: 100%;
    position: relative;
    overflow: hidden;
    text-align: center
}

.slider-menu {
    position: absolute;
    left: 0;
    z-index: 900;
    width: 100%;
    bottom: 0;
}

.slider-menu label {
    cursor: pointer;
    display: inline-block;
    width: 12px;
    height: 12px;
    background: #FBC600;
    border-radius: 50px;
    border: 4px solid #171A1C;
    margin: 0 0.2em 1em;
}

.slider-menu label:hover,
.slider-menu label:focus,
.slider-menu label:active {
    background: #ff0000;
}

.slide {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 100%;
    z-index: 10;
    padding: 0;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    transition: left 0s 0.75s;
}

[id^="slide"]:checked+.slide {
    left: 0;
    z-index: 100;
    transition: left 0.65s ease-out;
}

.slide-1 {
    background-image: url("/assets/images/hero1.png");
    border-radius: 8px;
}

.slide-2 {
    background-image: url("/assets/images/hero2.png");
    border-radius: 8px;
}

.slide-3 {
    background-image: url("/assets/images/hero3.png");
    border-radius: 8px;
}

/* tour dates */

#tourdates {
    margin-top: 72px;
    font-size: 180%;
}

table {
    width: 100%;
}

td {
    height: 60px;
    text-align: left;
    vertical-align: middle;
    border-bottom: 3px solid #ff0000;
    font-size: 110%;
    font-weight: 500;
}

.button {
    background-color: #FCB600;
    height: 40px;
    border: none;
    color: #171a1c;
    padding: 8px 32px;
    text-align: center;
    text-decoration: none;
    font-weight: 500;
    font-size: 110%;
    border-radius: 8px;
}

.ticket-button {
    text-align: right;
}

/* footer */

footer {
    height: 120px;
}



footer ul {
    text-align: center;
    color: #FBC600;

}

footer ul li {
    display: inline-block;
}

footer i {
    font-size: 180%;
    margin: 1%;
    padding: 3% 3% 0;
    color: #FCB600;
}

footer div {
    text-align: center;
    padding: 0 0 2% 0;
}

/* Band page */

#band-members {
    clear: both;
}

#band {
    margin-top: 96px;
    padding: 80px 0 0;
    font-size: 180%;
    margin-bottom: 32px;
}

.member-photos {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.member-photos img {
    border-radius: 8px;
}

/* Image overlay */

.image {
    position: relative;
}



.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-image: url(/assets/images/overlay.png);
}

.image:hover .overlay {
    opacity: 1;
}

.overlay-text {
    color: #f2f2f2;
    font-size: 90%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    opacity: 1;
}

.overlay-text p {
    font-size: 110%;
}

/* Discography page */

#discography {
    clear: both;
}

#discography h1 {
    margin-top: 96px;
    padding: 80px 0 0;
    font-size: 180%;
    margin-bottom: 32px;
}

.albums {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.albums img {
    border-radius: 8px;
    margin: 12px 12px 12px 0;
}

i {
    width: 300px;
    margin: 12px 12px 12px 0;
}

